--- a/AngularPunchyWeb/AngularPunchyWeb/ClientApp/src/app/chatpage/chatpage.component.html
+++ b/AngularPunchyWeb/AngularPunchyWeb/ClientApp/src/app/chatpage/chatpage.component.html
@@ -32,7 +32,7 @@
     </button>
     <form #chat="ngForm" (ngSubmit)="onSubmit(chat.value)">
       <input class="input" type="text" name="userInput" placeholder="Talk to punchy here..." ngModel>
-      <button aria-label="Submit" class="button" type="submit"><mat-icon>double_arrow</mat-icon></button>
+      <button aria-label="Submit" class="button" type="submit"><mat-icon>send</mat-icon></button>
     </form>
   </div>
 </div>
