--- a/AngularPunchyWeb/AngularPunchyWeb/ClientApp/src/app/navbar/navbar.component.html
+++ b/AngularPunchyWeb/AngularPunchyWeb/ClientApp/src/app/navbar/navbar.component.html
@@ -5,5 +5,6 @@
   <div class="spacer"></div>
   <a mat-button routerLink="">Home</a>
   <a mat-button routerLink="punsubmission">Pun Form</a>
+  <a mat-button routerLink="punapproval">Pun Submissions</a>
 </mat-toolbar>
 
